--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
+    "axios": "^1.11.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
