--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.548.0",
     "next": "15.4.5",
+    "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
