fix: corrigir build de produção
- Adicionar Suspense ao useSearchParams em agent-config para resolver erro de prerender
- Migrar de Tailwind v4 para v3 (mais estável em produção)
- Corrigir configuração do PostCSS
- Atualizar globals.css com sintaxe @tailwind correta
- Substituir next.config.mjs por next.config.ts
- Remover output: standalone do next.config
- Adicionar arquivos Docker para deploy na VPS
- Atualizar dependências (tailwindcss, postcss, autoprefixer)

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,18 @@ clean-next.sh
 # Arquivos pessoais
 TODO.md
 NOTES.md
+
+# Backups
+*.backup
+
+# Environment files
+.env.production
+.env.local
+.env
+
+# Temporary files
+*.log
+build.log
+
+# Route configs temporários
+app/*/route.config.js
