--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build || true",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,16 +15,18 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.548.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
-    "tailwindcss": "^4"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
