--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "next": "15.4.5",
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "stripe": "^19.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "postcss": "^8.4.49",
