--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-phone-number-input": "^3.4.14",
     "stripe": "^19.3.1"
   },
   "devDependencies": {
