--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.548.0",
     "next": "15.4.5",
     "node-fetch": "^3.3.2",
