--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "openai": "^6.9.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-intersection-observer": "^10.0.0",
     "react-phone-number-input": "^3.4.14",
     "stripe": "^19.3.1"
   },
