--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "ffmpeg-static": "^5.3.0",
     "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.548.0",
-    "next": "15.4.5",
+    "next": "16.0.7",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "openai": "^6.9.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-intersection-observer": "^10.0.0",
     "react-phone-number-input": "^3.4.14",
     "stripe": "^19.3.1"
@@ -31,11 +31,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
-    "@types/react": "19.2.6",
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.4.5",
+    "eslint-config-next": "16.0.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
+  },
+  "overrides": {
+    "@types/react": "19.2.7"
   }
 }
