--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "ffmpeg-static": "^5.3.0",
     "fluent-ffmpeg": "^2.1.3",
+    "katex": "^0.16.27",
     "lucide-react": "^0.548.0",
     "next": "16.0.7",
     "node-fetch": "^3.3.2",
