--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,61 @@
+# Dependências e cache
 node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Next.js build
 .next
 out
+build
+
+# Ambiente
+.env
+.env.*
+!.env.example
+
+# Git
 .git
+.gitignore
+
+# Arquivos de desenvolvimento
 *.log
+*.md
+!README.md
+.vscode
+.idea
+
+# Arquivos de teste
+tests
+__tests__
+coverage
+*.test.js
+*.spec.js
+
+# Arquivos temporários
+tmp
+temp
+.tmp
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Arquivos SQL (não necessários no build)
+*.sql
+
+# Documentação específica
+docs
+CHAT-SETUP-INSTRUCTIONS.md
+WEBHOOK-DIAGNOSTICO.md
+WEBHOOK_MEDIA_UPGRADE.md
+CORRECAO_BANCO_DADOS.md
+FAVICON-SETUP.md
+
+# Scripts de desenvolvimento
+scripts
+fix-*.js
+
+# Supabase migrations (gerenciado separadamente)
+supabase
+migrations
