--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,13 @@
-# Dependências e cache
+# Dependências - EXCLUI do build context (não da imagem final)
 node_modules
 npm-debug.log
 yarn-debug.log
 yarn-error.log
 
-# Next.js build
+# Build local (será gerado dentro do Docker)
 .next
-out
-build
 
-# Ambiente
+# Ambiente (NUNCA incluir secrets)
 .env
 .env.*
 !.env.example
@@ -17,11 +15,10 @@ build
 # Git
 .git
 .gitignore
+.gitattributes
 
 # Arquivos de desenvolvimento
 *.log
-*.md
-!README.md
 .vscode
 .idea
 
@@ -32,30 +29,22 @@ coverage
 *.test.js
 *.spec.js
 
-# Arquivos temporários
-tmp
-temp
-.tmp
-
 # OS files
 .DS_Store
 Thumbs.db
 
-# Arquivos SQL (não necessários no build)
+# Arquivos SQL
 *.sql
 
-# Documentação específica
+# Documentação
 docs
-CHAT-SETUP-INSTRUCTIONS.md
-WEBHOOK-DIAGNOSTICO.md
-WEBHOOK_MEDIA_UPGRADE.md
-CORRECAO_BANCO_DADOS.md
-FAVICON-SETUP.md
+*.md
+!README.md
 
 # Scripts de desenvolvimento
 scripts
 fix-*.js
 
-# Supabase migrations (gerenciado separadamente)
+# Supabase migrations
 supabase
 migrations
