--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,56 @@
 services:
+  # ==========================================================================
+  # TRAEFIK - Proxy Reverso com SSL Automático
+  # ==========================================================================
+  traefik:
+    image: traefik:v3.2
+    container_name: traefik
+    restart: unless-stopped
+    command:
+      # API e Dashboard
+      - "--api.dashboard=true"
+      - "--api.insecure=false"
+      # Providers
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=swiftbot_rede"
+      # Entrypoints
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      # Redirect HTTP → HTTPS
+      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.web.http.redirections.entrypoint.permanent=true"
+      # Let's Encrypt
+      - "--certificatesresolvers.letsencrypt.acme.email=suporte@swiftbot.com.br"
+      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
+      # Logs
+      - "--log.level=INFO"
+      - "--accesslog=true"
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - traefik-certificates:/letsencrypt
+    networks:
+      - swiftbot_rede
+    labels:
+      # Dashboard do Traefik (opcional - acesso em traefik.swiftbot.com.br)
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik-dashboard.rule=Host(`traefik.swiftbot.com.br`)"
+      - "traefik.http.routers.traefik-dashboard.entrypoints=websecure"
+      - "traefik.http.routers.traefik-dashboard.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.traefik-dashboard.service=api@internal"
+      - "traefik.http.routers.traefik-dashboard.middlewares=traefik-auth"
+      # Autenticação básica para dashboard (user: admin, pass: swiftbot2024)
+      # Gere nova senha com: htpasswd -nb admin suaSenhaAqui
+      - "traefik.http.middlewares.traefik-auth.basicauth.users=admin:$$apr1$$ruca84Hq$$mbjdMZBAG.KWn7vfN/SNK/"
+
+  # ==========================================================================
+  # SWIFTBOT - Aplicação Next.js
+  # ==========================================================================
   swiftbot:
     image: swiftbot:latest
     build:
@@ -6,6 +58,8 @@ services:
       dockerfile: Dockerfile
     container_name: swiftbot-app
     restart: unless-stopped
+    depends_on:
+      - traefik
     networks:
       - swiftbot_rede
     env_file:
@@ -13,29 +67,34 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-    deploy:
-      replicas: 1
-      placement:
-        constraints:
-          - node.role == manager
-      labels:
-        - "traefik.enable=true"
-        # HTTP → HTTPS redirect
-        - "traefik.http.routers.swiftbot-http.rule=Host(`swiftbot.com.br`) || Host(`www.swiftbot.com.br`)"
-        - "traefik.http.routers.swiftbot-http.entrypoints=web"
-        - "traefik.http.routers.swiftbot-http.middlewares=redirect-to-https"
-        - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-        - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
-        # HTTPS
-        - "traefik.http.routers.swiftbot-secure.rule=Host(`swiftbot.com.br`) || Host(`www.swiftbot.com.br`)"
-        - "traefik.http.routers.swiftbot-secure.entrypoints=websecure"
-        - "traefik.http.routers.swiftbot-secure.tls=true"
-        - "traefik.http.routers.swiftbot-secure.tls.certresolver=letsencryptresolver"
-        - "traefik.http.services.swiftbot.loadbalancer.server.port=3000"
-        # Health check
-        - "traefik.http.services.swiftbot.loadbalancer.healthcheck.path=/api/health"
-        - "traefik.http.services.swiftbot.loadbalancer.healthcheck.interval=30s"
+    labels:
+      - "traefik.enable=true"
+      # Rota principal
+      - "traefik.http.routers.swiftbot.rule=Host(`swiftbot.com.br`) || Host(`www.swiftbot.com.br`)"
+      - "traefik.http.routers.swiftbot.entrypoints=websecure"
+      - "traefik.http.routers.swiftbot.tls.certresolver=letsencrypt"
+      - "traefik.http.services.swiftbot.loadbalancer.server.port=3000"
+      # Health check
+      - "traefik.http.services.swiftbot.loadbalancer.healthcheck.path=/api/health"
+      - "traefik.http.services.swiftbot.loadbalancer.healthcheck.interval=30s"
+      - "traefik.http.services.swiftbot.loadbalancer.healthcheck.timeout=10s"
+      # Headers de segurança
+      - "traefik.http.middlewares.swiftbot-headers.headers.stsSeconds=31536000"
+      - "traefik.http.middlewares.swiftbot-headers.headers.stsIncludeSubdomains=true"
+      - "traefik.http.middlewares.swiftbot-headers.headers.stsPreload=true"
+      - "traefik.http.routers.swiftbot.middlewares=swiftbot-headers"
 
+# ==========================================================================
+# VOLUMES
+# ==========================================================================
+volumes:
+  traefik-certificates:
+    name: traefik-certificates
+
+# ==========================================================================
+# NETWORKS
+# ==========================================================================
 networks:
   swiftbot_rede:
-    external: true
+    name: swiftbot_rede
+    driver: bridge
