--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build || true",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,12 +19,12 @@
     "fluent-ffmpeg": "^2.1.3",
     "katex": "^0.16.27",
     "lucide-react": "^0.548.0",
-    "next": "16.0.7",
+    "next": "15.1.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "openai": "^6.9.1",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-intersection-observer": "^10.0.0",
     "react-phone-number-input": "^3.4.14",
     "stripe": "^19.3.1"
@@ -32,14 +32,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
-    "@types/react": "19.2.7",
+    "@types/react": "^18.3.18",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
-  },
-  "overrides": {
-    "@types/react": "19.2.7"
   }
 }
