--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,14 +81,10 @@ services:
   # SEQUENCE WORKER - Processa sequências de automação
   # ==========================================================================
   sequence-worker:
-    image: node:20-alpine
+    image: swiftbot:latest
     container_name: sequence-worker
     restart: unless-stopped
     working_dir: /app
-    volumes:
-      - ./workers:/app/workers
-      - ./package.json:/app/package.json
-      - ./node_modules:/app/node_modules
     command: ["node", "workers/sequence-worker.js"]
     env_file:
       - .env
