--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
         - NEXT_PUBLIC_CHAT_SUPABASE_URL=${NEXT_PUBLIC_CHAT_SUPABASE_URL}
         - NEXT_PUBLIC_CHAT_SUPABASE_ANON_KEY=${NEXT_PUBLIC_CHAT_SUPABASE_ANON_KEY}
         - NEXT_PUBLIC_SITE_URL=${NEXT_PUBLIC_SITE_URL}
+        - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}
     container_name: swiftbot-app
     restart: unless-stopped
     depends_on:
