--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "docx": "^9.5.1",
     "dotenv": "^17.2.3",
     "ffmpeg-static": "^5.3.0",
     "fluent-ffmpeg": "^2.1.3",
+    "jspdf": "^3.0.4",
     "katex": "^0.16.27",
     "lucide-react": "^0.548.0",
     "next": "15.1.3",
