affiliates + preços corretos (parte 1)

--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "docx": "^9.5.1",
     "dotenv": "^17.2.3",
     "ffmpeg-static": "^5.3.0",
@@ -26,9 +29,11 @@
     "nodemailer": "^7.0.10",
     "openai": "^6.9.1",
     "react": "^18.3.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^10.0.0",
     "react-phone-number-input": "^3.4.14",
+    "recharts": "^3.6.0",
     "stripe": "^19.3.1"
   },
   "devDependencies": {
