--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.4",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
     "dotenv": "^17.2.3",
